yo @microsoft/sharepoint
node ➜ /workspaces/try-sharepoint-framework (main) $ yo @microsoft/sharepoint

     _-----_     ╭──────────────────────────╮
    |       |    │ Welcome to the Microsoft │
    |--(o)--|    │      365 SPFx Yeoman     │
   `---------´   │     Generator@1.18.2     │
    ( _´U`_ )    ╰──────────────────────────╯
    /___A___\   /
     |  ~  |
   __'.___.'__
 ´   `  |° ´ Y `

See https://aka.ms/spfx-yeoman-info for more information on how to use this generator.
? Which type of client-side component to create? WebPart
Add new Web part to solution hello-world.
? What is your Web part name?
The folder "/workspaces/try-sharepoint-framework/src/webparts/helloWorld" already exists. Please choose a different name for your component.
? What is your Web part name? HelloWorldReact
? Which template would you like to use? React
    force package.json
    force .yo-rc.json
    force config/config.json
    force config/serve.json
    force config/package-solution.json
    force .eslintrc.js
   create src/webparts/helloWorldReact/components/IHelloWorldReactProps.ts
   create src/webparts/helloWorldReact/components/HelloWorldReact.module.scss
   create src/webparts/helloWorldReact/components/HelloWorldReact.tsx
   create src/webparts/helloWorldReact/HelloWorldReactWebPart.ts
   create src/webparts/helloWorldReact/loc/en-us.js
   create src/webparts/helloWorldReact/loc/mystrings.d.ts
   create src/webparts/helloWorldReact/assets/welcome-dark.png
   create src/webparts/helloWorldReact/assets/welcome-light.png
   create src/webparts/helloWorldReact/HelloWorldReactWebPart.manifest.json
   create teams/b3a6e14a-a6dd-4859-9702-e0c3e13986bf_outline.png
   create teams/b3a6e14a-a6dd-4859-9702-e0c3e13986bf_color.png

Changes to package.json were detected.

Running npm install for you to install the required dependencies.
npm WARN ERESOLVE overriding peer dependency
npm WARN While resolving: hello-world@0.0.1
npm WARN Found: react@17.0.2
npm WARN node_modules/react
npm WAR

--- a/config/config.json
+++ b/config/config.json
@@ -9,10 +9,19 @@
           "manifest": "./src/webparts/helloWorld/HelloWorldWebPart.manifest.json"
         }
       ]
+    },
+    "hello-world-react-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/helloWorldReact/HelloWorldReactWebPart.js",
+          "manifest": "./src/webparts/helloWorldReact/HelloWorldReactWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {},
   "localizedResources": {
-    "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js"
+    "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js",
+    "HelloWorldReactWebPartStrings": "lib/webparts/helloWorldReact/loc/{locale}.js"
   }
 }
