yo @microsoft/sharepoint
discard changes on .eslintrc.js

node ➜ /workspaces/try-sharepoint-framework (feature/use-the-SPFx-PnP-reusable-property-pane-control) $ yo @microsoft/sharepoint

     _-----_     ╭──────────────────────────╮
    |       |    │ Welcome to the Microsoft │
    |--(o)--|    │      365 SPFx Yeoman     │
   `---------´   │     Generator@1.18.2     │
    ( _´U`_ )    ╰──────────────────────────╯
    /___A___\   /
     |  ~  |
   __'.___.'__
 ´   `  |° ´ Y `

See https://aka.ms/spfx-yeoman-info for more information on how to use this generator.
? Which type of client-side component to create? WebPart
Add new Web part to solution hello-world.
? What is your Web part name? HelloPnPControls
? Which template would you like to use? No framework
    force package.json
    force .yo-rc.json
    force config/config.json
    force config/serve.json
    force config/package-solution.json
    force .eslintrc.js
   create src/webparts/helloPnPControls/HelloPnPControlsWebPart.module.scss
   create src/webparts/helloPnPControls/HelloPnPControlsWebPart.ts
   create src/webparts/helloPnPControls/loc/en-us.js
   create src/webparts/helloPnPControls/loc/mystrings.d.ts
   create src/webparts/helloPnPControls/assets/welcome-dark.png
   create src/webparts/helloPnPControls/assets/welcome-light.png
   create src/webparts/helloPnPControls/HelloPnPControlsWebPart.manifest.json
   create teams/b7211de3-d062-4293-b8f4-0db0bb1cca83_outline.png
   create teams/b7211de3-d062-4293-b8f4-0db0bb1cca83_color.png

Changes to package.json were detected.

Running npm install for you to install the required dependencies.

up to date, audited 2527 packages in 3s

231 packages are looking for funding
  run `npm fund` for details

64 vulnerabilities (43 moderate, 21 high)

To address issues that do not require attention, run:
  npm audit fix

To address all issues possible (including breaking changes), run:
  npm audit fix --force

Some issues need review, and may require choosing
a diffe

--- a/config/config.json
+++ b/config/config.json
@@ -25,12 +25,21 @@
           "manifest": "./src/webparts/helloPropertyPane/HelloPropertyPaneWebPart.manifest.json"
         }
       ]
+    },
+    "hello-pn-p-controls-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/helloPnPControls/HelloPnPControlsWebPart.js",
+          "manifest": "./src/webparts/helloPnPControls/HelloPnPControlsWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {},
   "localizedResources": {
     "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js",
     "HelloWorldReactWebPartStrings": "lib/webparts/helloWorldReact/loc/{locale}.js",
-    "HelloPropertyPaneWebPartStrings": "lib/webparts/helloPropertyPane/loc/{locale}.js"
+    "HelloPropertyPaneWebPartStrings": "lib/webparts/helloPropertyPane/loc/{locale}.js",
+    "HelloPnPControlsWebPartStrings": "lib/webparts/helloPnPControls/loc/{locale}.js"
   }
 }
