npm install @pnp/spfx-property-controls -SE
node ➜ /workspaces/try-sharepoint-framework (feature/use-the-SPFx-PnP-reusable-property-pane-control) $ npm install @pnp/spfx-property-controls -SE
npm WARN deprecated adal-angular@1.0.17: This package is no longer supported. Please migrate to @azure/msal-angular.

added 46 packages, and audited 2573 packages in 14s

232 packages are looking for funding
  run `npm fund` for details

64 vulnerabilities (43 moderate, 21 high)

To address issues that do not require attention, run:
  npm audit fix

To address all issues possible (including breaking changes), run:
  npm audit fix --force

Some issues need review, and may require choosing
a different dependency.

Run `npm audit` for details.

--- a/config/config.json
+++ b/config/config.json
@@ -40,6 +40,7 @@
     "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js",
     "HelloWorldReactWebPartStrings": "lib/webparts/helloWorldReact/loc/{locale}.js",
     "HelloPropertyPaneWebPartStrings": "lib/webparts/helloPropertyPane/loc/{locale}.js",
-    "HelloPnPControlsWebPartStrings": "lib/webparts/helloPnPControls/loc/{locale}.js"
+    "HelloPnPControlsWebPartStrings": "lib/webparts/helloPnPControls/loc/{locale}.js",
+    "PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js"
   }
 }
